<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">


    <ListPreference
        android:defaultValue="@string/settings_section_default"
        android:entries="@array/settings_section_labels"
        android:entryValues="@array/settings_section_values"
        android:key="@string/settings_section_key"
        android:title="@string/settings_section_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_page_size_default"
        android:inputType="number"
        android:key="@string/settings_page_size_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_page_size_label" />

    <ListPreference
        android:defaultValue="@string/settings_use_date_default"
        android:entries="@array/settings_use_date_labels"
        android:entryValues="@array/settings_use_date_values"
        android:key="@string/settings_use_date_key"
        android:title="@string/settings_use_date_label" />

</PreferenceScreen>